--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,24 @@
-form{
-	padding:30px;
-	margin:30px;
-}
-
 .location-list{
 	list-style:none;
 }
 
-.location {
-	color:red;
+.locationli {
+	font-size:20px;
+	color:teal;
 	cursor: pointer;
 }
 
 .show-places{
 	display:none;
+}
+
+
+.all-locations{
+	font-size:30px;
+}
+
+.header-text{
+	font-size:60px;
+	text-align:center;
+	margin:40px;
 }
